--- a/src/apps/Index/PageDemo/style.less
+++ b/src/apps/Index/PageDemo/style.less
@@ -1,21 +1,53 @@
+@matrix-width: 50%;
+@matrix-height: 65%;
+@map-height: 60%;
+@hist-resolution-height: 20%;
+@hist-resolution-width: 30%;
+
 #PageDemo {
   position: relative;
   width: 100%;
   height: 100%;
   overflow: hidden;
-  .area-left {
-    position: relative;
-    width: 60%;
-    height: 100%;
+  .area {
+    position: absolute;
+    border: solid #ccc 1px;
+    border-radius: 5px;
     float: left;
     overflow: hidden;
   }
-  .area-right {
-    position: relative;
-    width: 40%;
-    height: 100%;
-    background: green;
-    float: left;
-    overflow: hidden;
+
+  #area-matrix {
+    width: @matrix-width;
+    height: @matrix-height;
   }
+  #area-calendar {
+    top: @matrix-height;
+    width: @matrix-width;
+    height: 35%;
+  }
+  #area-map {
+    left: @matrix-width;
+    width: 50%;
+    height: @map-height;
+  }
+  #area-hist-category {
+    left: @matrix-width;
+    top: @map-height;
+    width: @hist-resolution-width;
+    height: @hist-resolution-height;
+  }
+  #area-hist-resolution {
+    left: @matrix-width;
+    top: @map-height + @hist-resolution-height;
+    width: @hist-resolution-width;
+    height: 20%;
+  }
+  #area-wordle {
+    left: @matrix-width + @hist-resolution-width;
+    top: @map-height;
+    width: 20%;
+    height: 40%;
+  }
+
 }
