--- a/src/components/Header/template.html
+++ b/src/components/Header/template.html
@@ -1,7 +1,7 @@
 <nav id="{{ style.Header }}" class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">PKU</a>
+            <a class="navbar-brand" href="#">San Francisco Criminal Event</a>
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
