--- a/src/commons/vars.less
+++ b/src/commons/vars.less
@@ -1,3 +1,10 @@
 @color-light: rgba(255, 255, 255, 0.8);
 @app-header-height: 50px;
 @app-footer-height: 50px;
+.area {
+  position: absolute;
+  border: solid #ccc 1px;
+  border-radius: 5px;
+  float: left;
+  overflow: hidden;
+}
