--- a/src/apps/Index/PageDemo/style.less
+++ b/src/apps/Index/PageDemo/style.less
@@ -17,9 +17,26 @@
     overflow: hidden;
   }
 
-  #area-matrix {
+  #area-big-matrix {
+    position: absolute;
     width: @matrix-width;
     height: @matrix-height;
+    #area-histogram1 {
+      width:85%;
+      height:20%;
+    }
+    #area-histogram2 {
+      top:20%;
+      left:85%;
+      width:15%;
+      height:80%;
+    }
+    #area-matrix {
+      top:20%;
+      right:15%;
+      width:85%;
+      height:80%;
+    }
   }
   #area-calendar {
     top: @matrix-height;
