update Crime Category/ Crime Resolution

--- a/src/components/BarChart/template.html
+++ b/src/components/BarChart/template.html
@@ -1,5 +1,3 @@
-<div id="BarChart" class="{{ style['bar-chart'] }}">
-    <svg id="BarChartsvg" class="{{ style['bar-chartsvg'] }}">
-        <button id="ButtonBC" ></button>
-    </svg>
+<div id="{{ elId }}" class="{{ style['bar-chart'] }}">
+    <svg class="{{ style['bar-chartsvg'] }}"></svg>
 </div>
