--- a/src/components/BarChart/style.less
+++ b/src/components/BarChart/style.less
@@ -15,16 +15,20 @@
   shape-rendering: crispEdges;
 }
 
-.axis text {
-  font-family: sans-serif;
-  font-size: 11px;
-}
-
 .bar {
   fill: steelblue;
 }
 
-.MyText {
-  fill: white;
-  text-anchor: middle;
+.bar:hover {
+  fill: orange ;
 }
+
+.axis text {
+  font-family: sans-serif;
+  font-size: 11px;
+}
+//
+//.MyText {
+//  fill: white;
+//  text-anchor: middle;
+//}
