--- a/src/components/BarChart/style.less
+++ b/src/components/BarChart/style.less
@@ -15,13 +15,17 @@
   shape-rendering: crispEdges;
 }
 
-.bar {
-  fill: steelblue;
-}
+//.bar {
+//  fill: steelblue;
+//}
 
 .bar:hover {
-  fill: orange ;
+  fill: orange;
 }
+
+//.bar:click {
+//  fill: green;
+//}
 
 .axis text {
   font-family: sans-serif;
