--- a/src/apps/Index/PageSlide/style.less
+++ b/src/apps/Index/PageSlide/style.less
@@ -4,3 +4,11 @@
   width: 100%;
   height: 100%;
 }
+
+.wrapper-slide {
+  height: 100%;
+}
+.content-slide {
+  height: 100%;
+  top: 10% !important;
+}
