--- a/src/components/BarChartHor/style.less
+++ b/src/components/BarChartHor/style.less
@@ -27,10 +27,10 @@
 //  fill: green;
 //}
 
-.axis text {
-  font-family: sans-serif;
-  font-size: 11px;
-}
+//.axis text {
+//  font-family: sans-serif;
+//  font-size: 11px;
+//}
 //
 //.MyText {
 //  fill: white;
