--- a/src/components/Container/style.less
+++ b/src/components/Container/style.less
@@ -1,4 +1,12 @@
+@btn-height: 25px;
+
 .container {
   width: 100%;
   height: 100%;
+}
+.container-btn {
+  height: @btn-height;
+}
+.content-wrapper {
+  height: calc(~"100% - " @btn-height);
 }
